types/src/credentials/snapshots/phnxtypes__credentials__tests__client_credential_csr_serde_stability_json.snap
---
source: types/src/credentials/mod.rs
expression: "&*CLIENT_CREDENTIAL_CSR"
snapshot_kind: text
---
{
  "version": "Alpha",
  "client_id": {
    "user_name": {
      "user_name": "alice",
      "domain": {
        "domain": {
          "Domain": "localhost"
        }
      }
    },
    "client_id": "00000000-0000-0000-0000-00000000002a"
  },
  "signature_scheme": "ED25519",
  "verifying_key": [
    1,
    2,
    3
  ]
}
