types/src/credentials/snapshots/phnxtypes__credentials__tests__client_credential_payload_cbor_stability_cbor.snap
---
source: types/src/credentials/mod.rs
expression: bytes
extension: cbor
snapshot_kind: binary
---
