types/src/credentials/snapshots/phnxtypes__credentials__tests__client_credential_serde_stability_json.snap
---
source: types/src/credentials/mod.rs
expression: "&*CLIENT_CREDENTIAL"
snapshot_kind: text
---
{
  "payload": {
    "csr": {
      "version": "Alpha",
      "client_id": {
        "user_name": {
          "user_name": "alice",
          "domain": {
            "domain": {
              "Domain": "localhost"
            }
          }
        },
        "client_id": "00000000-0000-0000-0000-00000000002a"
      },
      "signature_scheme": "ED25519",
      "verifying_key": [
        1,
        2,
        3
      ]
    },
    "expiration_data": {
      "not_before": "1985-11-15T23:45:00Z",
      "not_after": "1986-02-13T23:45:00Z"
    },
    "signer_fingerprint": [
      1,
      2,
      3
    ]
  },
  "signature": [
    1,
    2,
    3
  ]
}
